made the navbar responsive with the logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><span><a href="/">Home</a></span></li>
 
 
-                    <li><a href="/">Our Vision</a></li>
+                    <li><a href="/"> <span>Our</span>  Vision</a></li>
 
 
                     <li><a href="/">Services</a></li>
