Added a container for our vision section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apna Notes</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="left"><img src="/img/Apna.png" alt=""></div>
+            <div class="left"><img src="img/Apna.png" alt=""></div>
             <div class="right">
                 <ul>
 
@@ -29,5 +29,11 @@
             </div>
         </nav>
     </header>  
+
+
+    <div class="our-vision">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptates sunt reprehenderit architecto animi quibusdam eius, nostrum soluta quisquam. Eum ipsa porro corrupti, nobis aperiam enim aliquam ex amet quis?
+        Sint ipsa saepe a unde officiis corrupti itaque, nobis praesentium ex, quisquam voluptate maiores blanditiis, rem numquam sit! Doloremque quasi pariatur molestiae deleniti dolorum soluta. Quisquam sapiente ipsum itaque illum.</p>
+    </div>
 </body>
 </html>
